--- a/notebooks/Micrograd-Scratch-v2.ipynb
+++ b/notebooks/Micrograd-Scratch-v2.ipynb
@@ -201,8 +201,9 @@
     "        for p in self.parameters():\n",
     "            p.grad = 0.0\n",
     "    \n",
+    "    # NOTE: Change default to also return the same type\n",
     "    def parameters(self):\n",
-    "        pass\n",
+    "        return []\n",
     "\n",
     "class Neuron(Module):\n",
     "    \"\"\"Take a certain number of weights in, and then takes in a bias. This is a traditional perceptron\"\"\"\n",
