--- a/notebooks/Advent-2023.ipynb
+++ b/notebooks/Advent-2023.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,6 +226,149 @@
     "    return ans\n",
     "\n",
     "print(find_min_cubes())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [Day 3](https://adventofcode.com/2023/day/3): Gear Ratios"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "in3 = list(parse(3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One idea is that from the symbols, you flood fill outwards going into number tiles, then you can use regex to find the numbers that are \"valid\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "550934\n"
+     ]
+    }
+   ],
+   "source": [
+    "h, l = len(in3), len(in3[0])\n",
+    "\n",
+    "val = [[0 for _ in range(l)] for _ in range(h)]\n",
+    "q = deque()\n",
+    "\n",
+    "for i, line in enumerate(in3):\n",
+    "    for j, c in enumerate(line):\n",
+    "        if not c.isdigit() and c != '.':\n",
+    "            for di in range(-1, 2):\n",
+    "                for dj in range(-1, 2):\n",
+    "                    ni, nj = i + di, j + dj\n",
+    "                    if 0 <= ni < h and 0 <= nj < l and in3[ni][nj].isdigit():\n",
+    "                        val[ni][nj] = 1\n",
+    "                        q.append((ni, nj))\n",
+    "\n",
+    "while len(q) > 0:\n",
+    "    i, j = q.pop()\n",
+    "    # print('popping')\n",
+    "    for dj in range(-1, 2):\n",
+    "        ni, nj = i, j + dj\n",
+    "        if 0 <= ni < h and 0 <= nj < l:\n",
+    "            # print(f'({ni}, {nj}) -> {in3[ni][nj]}')\n",
+    "            if val[ni][nj] == 0 and in3[ni][nj].isdigit():\n",
+    "                # print('adding new')\n",
+    "                val[ni][nj] = 1\n",
+    "                # print(f'Adding ({ni}, {nj})')\n",
+    "                q.append((ni, nj))\n",
+    "\n",
+    "ans = 0\n",
+    "\n",
+    "# for i in range(h):\n",
+    "#     for j in range(l):\n",
+    "#         print(val[i][j], end='')\n",
+    "#     print()\n",
+    "\n",
+    "for i, line in enumerate(in3):\n",
+    "    nums = [(m.group(0), m.start(0)) for m in re.finditer(r'\\d+', line)]\n",
+    "    for num, index in nums:\n",
+    "        if val[i][index] > 0:\n",
+    "            ans += int(num)\n",
+    "            # print(f'Adding {num}')\n",
+    "\n",
+    "print(ans)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2\n",
+    "\n",
+    "Now we're looking for gears. Instead of flooding each one, should write a function that takes in an index and a marker and floods it in along with giving you the integer. Then for each symbol, keep track of how many ints you got to see whether or not you have a valid \"gear\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "81997870\n"
+     ]
+    }
+   ],
+   "source": [
+    "h, l = len(in3), len(in3[0])\n",
+    "\n",
+    "vis = [[0 for _ in range(l)] for _ in range(h)]\n",
+    "\n",
+    "def flood_num(i, j):\n",
+    "    val = in3[i][j]\n",
+    "    lj, rj = j-1, j+1\n",
+    "    vis[i][j] = 1\n",
+    "\n",
+    "    while lj >= 0 and in3[i][lj].isdigit():\n",
+    "        val = in3[i][lj] + val\n",
+    "        vis[i][lj] = 1\n",
+    "        lj -= 1\n",
+    "\n",
+    "    while rj < l and in3[i][rj].isdigit():\n",
+    "        val = val + in3[i][rj]\n",
+    "        vis[i][rj] = 1\n",
+    "        rj += 1\n",
+    "\n",
+    "    return int(val)\n",
+    "\n",
+    "ans = 0\n",
+    "\n",
+    "for i, line in enumerate(in3):\n",
+    "    for j, c in enumerate(line):\n",
+    "        if c == '*':\n",
+    "            adjacent_nums = []\n",
+    "            for di in range(-1, 2):\n",
+    "                for dj in range(-1, 2):\n",
+    "                    ni, nj = i + di, j + dj\n",
+    "                    if 0 <= ni < h and 0 <= nj < l and in3[ni][nj].isdigit() and not vis[ni][nj]:\n",
+    "                        adjacent_nums.append(flood_num(ni, nj))\n",
+    "            if len(adjacent_nums) == 2:\n",
+    "                ans += adjacent_nums[0] * adjacent_nums[1]\n",
+    "\n",
+    "print(ans)\n"
    ]
   }
  ],
