--- a/notebooks/Advent-Utils.ipynb
+++ b/notebooks/Advent-Utils.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from collections import deque\n",
     "from typing import *\n",
     "\n",
     "import os\n",
+    "import pprint\n",
     "import re"
    ]
   },
