more advent of code

--- a/notebooks/Advent-Utils.ipynb
+++ b/notebooks/Advent-Utils.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections import deque\n",
+    "from collections import deque, defaultdict\n",
+    "from functools import reduce\n",
     "from typing import *\n",
     "\n",
+    "import math\n",
     "import os\n",
     "import pprint\n",
     "import re"
@@ -32,17 +34,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "lines = str.splitlines\n",
+    "def paragraphs(text): return text.split('\\n\\n')\n",
     "\n",
     "def parse(day: int, parser: callable=str, splitter: callable=lines):\n",
     "    \"\"\"Splits the input file using `splitter` before parsing each split with `parser`\n",
     "    \"\"\"\n",
     "    text = get_text(day)\n",
-    "    records = map(parser, splitter(text.rstrip()))\n",
+    "    records = mapt(parser, splitter(text.rstrip()))\n",
     "    return records\n",
     "\n",
     "def get_text(day: int):\n",
@@ -99,7 +102,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def cells_around(x: int, y: int, include_center: bool=True) -> Tuple[int, int]:\n",
+    "    for xi in (-1, 2):\n",
+    "        for yi in (-1, 2):\n",
+    "            if not include_center and xi == 0 and yi == 0:\n",
+    "                continue\n",
+    "            yield (x + xi, y + yi)"
+   ]
   }
  ],
  "metadata": {
