--- a/notebooks/Advent-2023.ipynb
+++ b/notebooks/Advent-2023.ipynb
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -693,6 +693,393 @@
     "one_time = int(reduce(lambda x, y: x+y, mapt(str, times)))\n",
     "one_dist = int(reduce(lambda x, y: x+y, mapt(str, distances)))\n",
     "print(b_search(0, one_time, one_dist))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [Day 7](https://adventofcode.com/2023/day/7): Camel Cards"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "in7 = parse(7, strings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "card_vals = \"2 3 4 5 6 7 8 9 T J Q K A\".split()\n",
+    "\n",
+    "class hand(tuple):\n",
+    "    def __lt__(self, other):\n",
+    "        self_cards = Counter(self[0])\n",
+    "        other_cards = Counter(other[0])\n",
+    "\n",
+    "        # If this hand has more unique cards, then this is the worse hand\n",
+    "        if len(self_cards) != len(other_cards):\n",
+    "            return len(self_cards) > len(other_cards)\n",
+    "\n",
+    "        self_mc = self_cards.most_common()\n",
+    "        other_mc = other_cards.most_common()\n",
+    "\n",
+    "        self_mc = sorted(self_mc, key=lambda x: pow(20, x[1]) + card_vals.index(x[0]), reverse=True)\n",
+    "        other_mc = sorted(other_mc, key=lambda x: pow(20, x[1]) + card_vals.index(x[0]), reverse=True)\n",
+    "\n",
+    "        # But with this is that counter doesn't sort by \"card\" value\n",
+    "        for i in range(len(self_mc)):\n",
+    "            # If your current set of cards is not equal, then this hand is worse is you have less\n",
+    "            if self_mc[i][1] != other_mc[i][1]:\n",
+    "                return self_mc[i][1] < other_mc[i][1]\n",
+    "\n",
+    "        for i in range(len(self[0])):\n",
+    "            if self[0][i] != other[0][i]:\n",
+    "                return card_vals.index(self[0][i]) < card_vals.index(other[0][i])\n",
+    "\n",
+    "def hand_val(hand: tuple) -> int:\n",
+    "    cards = Counter(hand[0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "247961593\n"
+     ]
+    }
+   ],
+   "source": [
+    "sorted_hands = sorted(in7, key=hand)\n",
+    "hand_vals = [int(sorted_hands[i][1]) * (i+1) for i in range(len(sorted_hands))]\n",
+    "print(sum(hand_vals))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2\n",
+    "\n",
+    "Jokers can act as anything, but now they're weak. Just when you check, add jokers to the top set, and now also move them below 2s in terms of individual value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "card_vals = \"J 2 3 4 5 6 7 8 9 T Q K A\".split()\n",
+    "\n",
+    "class hand(tuple):\n",
+    "    def __lt__(self, other):\n",
+    "        self_cards = Counter(self[0])\n",
+    "        other_cards = Counter(other[0])\n",
+    "\n",
+    "        self_mc = self_cards.most_common()\n",
+    "        other_mc = other_cards.most_common()\n",
+    "\n",
+    "        self_js = self_cards['J']\n",
+    "        other_js = other_cards['J']\n",
+    "\n",
+    "        self_mc = sorted(self_mc, key=lambda x: pow(20, x[1]) + card_vals.index(x[0]), reverse=True)\n",
+    "        other_mc = sorted(other_mc, key=lambda x: pow(20, x[1]) + card_vals.index(x[0]), reverse=True)\n",
+    "\n",
+    "        if 0 < self_js < 5:\n",
+    "            self_mc.remove(('J', self_js))\n",
+    "            self_mc[0] = (self_mc[0][0], self_mc[0][1] + self_js)\n",
+    "        if 0 < other_js < 5:\n",
+    "            other_mc.remove(('J', other_js))\n",
+    "            other_mc[0] = (other_mc[0][0], other_mc[0][1] + other_js)\n",
+    "\n",
+    "        if len(self_mc) != len(self_mc):\n",
+    "            return len(self_mc) > len(self_mc)\n",
+    "\n",
+    "        # But with this is that counter doesn't sort by \"card\" value\n",
+    "        for i in range(len(self_mc)):\n",
+    "            # If your current set of cards is not equal, then this hand is worse is you have less\n",
+    "            if self_mc[i][1] != other_mc[i][1]:\n",
+    "                return self_mc[i][1] < other_mc[i][1]\n",
+    "\n",
+    "        for i in range(len(self[0])):\n",
+    "            if self[0][i] != other[0][i]:\n",
+    "                return card_vals.index(self[0][i]) < card_vals.index(other[0][i])\n",
+    "\n",
+    "def hand_val(hand: tuple) -> int:\n",
+    "    cards = Counter(hand[0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "248750699\n"
+     ]
+    }
+   ],
+   "source": [
+    "sorted_hands = sorted(in7, key=hand)\n",
+    "hand_vals = [int(sorted_hands[i][1]) * (i+1) for i in range(len(sorted_hands))]\n",
+    "print(sum(hand_vals))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [Day 8](https://adventofcode.com/2023/day/8): Haunted Wasteland"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "in8 = parse(8, strings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'AAA'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m/Users/iyzg/src/bytesofpi/notebooks/Advent-2023.ipynb Cell 48\u001b[0m line \u001b[0;36m7\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/iyzg/src/bytesofpi/notebooks/Advent-2023.ipynb#Y116sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m cur_node \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mAAA\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/iyzg/src/bytesofpi/notebooks/Advent-2023.ipynb#Y116sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mwhile\u001b[39;00m cur_node \u001b[39m!=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mZZZ\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/iyzg/src/bytesofpi/notebooks/Advent-2023.ipynb#Y116sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     \u001b[39m# print(cur_node, ans % len(steps), steps[ans % len(steps)])\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/iyzg/src/bytesofpi/notebooks/Advent-2023.ipynb#Y116sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     cur_node \u001b[39m=\u001b[39m links[cur_node][steps[ans \u001b[39m%\u001b[39m \u001b[39mlen\u001b[39m(steps)] \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mR\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/iyzg/src/bytesofpi/notebooks/Advent-2023.ipynb#Y116sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     \u001b[39m# print(c\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/iyzg/src/bytesofpi/notebooks/Advent-2023.ipynb#Y116sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     ans \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'AAA'"
+     ]
+    }
+   ],
+   "source": [
+    "ans = 0\n",
+    "cur_node = 'AAA'\n",
+    "\n",
+    "\n",
+    "while cur_node != 'ZZZ':\n",
+    "    # print(cur_node, ans % len(steps), steps[ans % len(steps)])\n",
+    "    cur_node = links[cur_node][steps[ans % len(steps)] == 'R']\n",
+    "    # print(c\n",
+    "    ans += 1\n",
+    "\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2\n",
+    "\n",
+    "Now working on Part 2, kind of confused about how to make it run quick enough. So you have to check when the first time is that all the nodes will land on a node that ends in Z. Maybe something you can do is you can find all the timesteps that a node will land on a Z thing, then you know you can add len(steps) to that for the next time it will be there. This would be quicker than stepping through all of them manually. Then you can check for the most common one, see if it is the all number of nodes, then continue on? Oh wait, this is incorrect, because then you'd have to know when a \"cycle\" of a node ends, which I could find but could also be quite long?\n",
+    "\n",
+    "I sort of want to find GCD, but I don't think I really want to get the minimum steps and then repeat that? Also you can't really get GCD here. So for each node, I can find \"long\" a loop is, then I can get the number of times they stepped on a node with Z. Then I iterate through this? I suppose it is quicker than what I'm doing right now."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(16272, [16271])\n",
+      "(24254, [24253])\n",
+      "(13203, [13201])\n",
+      "(14433, [14429])\n",
+      "(18114, [18113])\n",
+      "(22419, [22411])\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/iyzg/src/bytesofpi/notebooks/Advent-2023.ipynb Cell 50\u001b[0m line \u001b[0;36m5\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/iyzg/src/bytesofpi/notebooks/Advent-2023.ipynb#Y106sZmlsZQ%3D%3D?line=56'>57</a>\u001b[0m     cycle_len, z_steps \u001b[39m=\u001b[39m cycle\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/iyzg/src/bytesofpi/notebooks/Advent-2023.ipynb#Y106sZmlsZQ%3D%3D?line=57'>58</a>\u001b[0m     z_steps \u001b[39m=\u001b[39m [x\u001b[39m+\u001b[39mcycle_len \u001b[39m*\u001b[39m i \u001b[39mfor\u001b[39;00m x \u001b[39min\u001b[39;00m z_steps]\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/iyzg/src/bytesofpi/notebooks/Advent-2023.ipynb#Y106sZmlsZQ%3D%3D?line=58'>59</a>\u001b[0m     val \u001b[39m=\u001b[39m val \u001b[39m+\u001b[39;49m Counter(z_steps)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/iyzg/src/bytesofpi/notebooks/Advent-2023.ipynb#Y106sZmlsZQ%3D%3D?line=59'>60</a>\u001b[0m mc \u001b[39m=\u001b[39m val\u001b[39m.\u001b[39mmost_common()\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/iyzg/src/bytesofpi/notebooks/Advent-2023.ipynb#Y106sZmlsZQ%3D%3D?line=60'>61</a>\u001b[0m \u001b[39mfor\u001b[39;00m z_step, z_cnt \u001b[39min\u001b[39;00m mc:\n",
+      "File \u001b[0;32m~/miniconda3/envs/pure/lib/python3.11/collections/__init__.py:825\u001b[0m, in \u001b[0;36mCounter.__add__\u001b[0;34m(self, other)\u001b[0m\n\u001b[1;32m    823\u001b[0m result \u001b[39m=\u001b[39m Counter()\n\u001b[1;32m    824\u001b[0m \u001b[39mfor\u001b[39;00m elem, count \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mitems():\n\u001b[0;32m--> 825\u001b[0m     newcount \u001b[39m=\u001b[39m count \u001b[39m+\u001b[39m other[elem]\n\u001b[1;32m    826\u001b[0m     \u001b[39mif\u001b[39;00m newcount \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m    827\u001b[0m         result[elem] \u001b[39m=\u001b[39m newcount\n",
+      "File \u001b[0;32m~/miniconda3/envs/pure/lib/python3.11/collections/__init__.py:601\u001b[0m, in \u001b[0;36mCounter.__missing__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    598\u001b[0m     \u001b[39msuper\u001b[39m()\u001b[39m.\u001b[39m\u001b[39m__init__\u001b[39m()\n\u001b[1;32m    599\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mupdate(iterable, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwds)\n\u001b[0;32m--> 601\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__missing__\u001b[39m(\u001b[39mself\u001b[39m, key):\n\u001b[1;32m    602\u001b[0m     \u001b[39m'\u001b[39m\u001b[39mThe count of elements not in the Counter is zero.\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m    603\u001b[0m     \u001b[39m# Needed so that self[missing_item] does not raise KeyError\u001b[39;00m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "steps, _, *connections = in8\n",
+    "steps = steps[0]\n",
+    "num_steps = len(steps)\n",
+    "\n",
+    "links = {}\n",
+    "for connection in connections:\n",
+    "    # print(connection)\n",
+    "    root, left, right = connection\n",
+    "    links[root] = (left, right)\n",
+    "\n",
+    "def advance_node(node: str, step: int):\n",
+    "    return links[node][steps[step % num_steps] == 'R']\n",
+    "\n",
+    "def advance_nodes(nodes: list, step: int) -> bool:\n",
+    "    nodes = list(map(lambda n: advance_node(n, step), nodes))\n",
+    "    print(nodes)\n",
+    "    done = all([nodes[i][-1] == 'Z' for i in range(len(nodes))])\n",
+    "    return nodes, done\n",
+    "\n",
+    "def find_cycles(node: str):\n",
+    "    cur_step = 0\n",
+    "    z_steps = []\n",
+    "    visited = defaultdict(list)\n",
+    "    \n",
+    "    while True:\n",
+    "        # print(node)\n",
+    "        node = advance_node(node, cur_step)\n",
+    "        cur_step += 1\n",
+    "        if (cur_step % num_steps) in visited[node]:\n",
+    "            break\n",
+    "        else:\n",
+    "            if node[-1] == 'Z':\n",
+    "                z_steps.append(cur_step)\n",
+    "            visited[node].append(cur_step % num_steps)\n",
+    "    \n",
+    "    # Cycle length, when we get to it :)\n",
+    "    return (cur_step - 1, z_steps)\n",
+    "\n",
+    "ans = 0\n",
+    "nodes = [x for x in links if x[-1] == 'A']\n",
+    "num_nodes = len(nodes)\n",
+    "cycles = []\n",
+    "done = False\n",
+    "\n",
+    "for node in nodes:\n",
+    "    cycle = find_cycles(node)\n",
+    "    cycles.append(cycle)\n",
+    "    print(cycle)\n",
+    "\n",
+    "val = Counter()\n",
+    "i = 0\n",
+    "MAX_VALUE = 1_000_000_000_000\n",
+    "min_ans = MAX_VALUE\n",
+    "\n",
+    "while not done:\n",
+    "    for cycle in cycles:\n",
+    "        cycle_len, z_steps = cycle\n",
+    "        z_steps = [x+cycle_len * i for x in z_steps]\n",
+    "        val = val + Counter(z_steps)\n",
+    "    mc = val.most_common()\n",
+    "    for z_step, z_cnt in mc:\n",
+    "        if z_cnt != num_nodes:\n",
+    "            break\n",
+    "        else:\n",
+    "            min_ans = min(min_ans, z_step)\n",
+    "\n",
+    "    if min_ans != MAX_VALUE:\n",
+    "        print(min_ans)\n",
+    "        break\n",
+    "    \n",
+    "    i += 1\n",
+    "\n",
+    "\n",
+    "# print(ans)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## [Day 9](https://adventofcode.com/2023/day/9): Mirage Maintenance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "in9 = parse(9, atoms)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def next_value(history: list) -> int:\n",
+    "    done_iter = all(x == 0 for x in history)\n",
+    "    if not done_iter:\n",
+    "        next_history = [(history[i] - history[i-1]) for i in range(1, len(history))]\n",
+    "        return history[-1] + next_value(next_history)\n",
+    "    else:\n",
+    "        return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1930746032\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sum([next_value(x) for x in in9]))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2\n",
+    "\n",
+    "Now they want you to extrapolate backwards which should be quite easy with this recursion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1154\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sum([next_value(x[::-1]) for x in in9]))"
    ]
   }
  ],
