--- a/notebooks/Advent-Utils.ipynb
+++ b/notebooks/Advent-Utils.ipynb
@@ -66,6 +66,9 @@
     "    \"\"\"A tuple of all the positive ints in text.\"\"\"\n",
     "    return mapt(int, re.findall(r'\\d+', text))\n",
     "\n",
+    "def strings(text: str) -> Tuple[str]:\n",
+    "    return mapt(str, re.findall(r'\\w+', text))\n",
+    "\n",
     "def atoms(text: str) -> Tuple[Atom]:\n",
     "    \"\"\"A tuple of all the atoms (numbers or identifiers) in text. Skip punctuation.\"\"\"\n",
     "    return mapt(atom, re.findall(r'[+-]?\\d+\\.?\\d*|\\w+', text))\n",
@@ -94,7 +97,11 @@
    "source": [
     "def mapt(function: Callable, *sequences) -> tuple:\n",
     "    \"\"\"`map`, with the result as a tuple.\"\"\"\n",
-    "    return tuple(map(function, *sequences))"
+    "    return tuple(map(function, *sequences))\n",
+    "\n",
+    "def mapl(function: Callable, *sequences) -> list:\n",
+    "    \"\"\"`map`, with the result as a list.\"\"\"\n",
+    "    return list(map(function, *sequences))"
    ]
   },
   {
