Cleaned up Day 11 code

--- a/notebooks/Advent-2023.ipynb
+++ b/notebooks/Advent-2023.ipynb
@@ -1233,31 +1233,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
     "def all_galaxy_dists(grid, expansion_factor: int=2) -> list[int]:\n",
-    "    cols = tuple(zip(*grid))\n",
-    "    empty_cols = [i for i, col in enumerate(cols) if '#' not in col]\n",
+    "    empty_cols = [i for i, col in enumerate(zip(*grid)) if '#' not in col]\n",
     "    empty_rows = [i for i, row in enumerate(grid) if '#' not in row]\n",
     "    galaxies = []\n",
-    "    dists = []\n",
-    "    for ri, row in enumerate(in11):\n",
-    "        indices = [i for i, x in enumerate(row) if x == '#']\n",
-    "        for x in indices:\n",
-    "            cols_to_add = bisect_left(empty_cols, x)\n",
-    "            rows_to_add = bisect_left(empty_rows, ri)\n",
-    "            galaxies.append((ri+rows_to_add*(expansion_factor-1), x+cols_to_add*(expansion_factor-1)))\n",
+    "    galaxies = [\n",
+    "        (\n",
+    "            ri + bisect_left(empty_rows, ri) * (expansion_factor - 1),\n",
+    "            ci + bisect_left(empty_cols, ci) * (expansion_factor - 1)\n",
+    "        )\n",
+    "        for ri, row in enumerate(grid)\n",
+    "        for ci, cell in enumerate(row) if cell == '#'\n",
+    "    ]\n",
     "    \n",
-    "    for g1, g2 in combinations(galaxies, 2):\n",
-    "        dists.append(taxi_distance(g1, g2))\n",
-    "    return dists"
+    "    return [taxi_distance(g1, g2) for g1, g2 in combinations(galaxies, 2)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1283,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1295,7 +1293,7 @@
     }
    ],
    "source": [
-    "print(sum(all_galaxy_dists(in11, 1_000_000)))"
+    "print(sum(all_galaxy_dists2(in11, 1_000_000)))"
    ]
   }
  ],
